--- a/index.html
+++ b/index.html
@@ -4,87 +4,99 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>쿠팡 바로가기 안내</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/pwa-cp/manifest.json">
   <meta name="theme-color" content="#0078FF">
-
+  <meta name="description" content="쿠팡 사이트 바로가기를 홈 화면에 추가하는 공식 안내 페이지입니다.">
   <style>
+    @font-face {
+      font-family: 'Pretendard';
+      src: local('Noto Sans KR'), local('Apple SD Gothic Neo'), local('Malgun Gothic');
+    }
+    :root {
+      --brand: #0078FF;
+      --text: #333;
+      --muted: #555;
+      --bg: #f7f8fa;
+      --shadow: rgba(0,0,0,.08);
+    }
+    * { box-sizing: border-box; }
     body {
-      font-family: 'Noto Sans KR', sans-serif;
-      margin: 0;
-      background: #f7f8fa;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
+      margin: 0; background: var(--bg);
+      min-height: 100dvh; display: grid; place-items: center;
+      font-family: 'Noto Sans KR', 'Apple SD Gothic Neo', 'Malgun Gothic', system-ui, -apple-system, sans-serif;
+      color: var(--text);
     }
     .card {
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      padding: 40px 24px;
-      max-width: 360px;
+      width: min(92vw, 420px);
+      background: #fff; border-radius: 20px; padding: 40px 26px;
+      box-shadow: 0 16px 40px var(--shadow);
+      text-align: center;
     }
     .logo {
-      width: 120px;
-      margin-bottom: 20px;
+      width: 140px; height: auto; margin: 0 auto 18px;
+      display: block;
     }
     h1 {
-      font-size: 1.4rem;
-      margin: 0;
-      color: #333;
+      font-size: 1.35rem; margin: 0; letter-spacing: -0.2px;
     }
     p {
-      font-size: 1rem;
-      color: #555;
-      margin-top: 12px;
-      line-height: 1.5;
+      margin: 12px 0 0; font-size: 1rem; color: var(--muted); line-height: 1.6;
     }
-    .guide {
-      margin-top: 20px;
-      background: #0078FF;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      padding: 12px 20px;
-      cursor: pointer;
-      transition: 0.2s;
+    .cta {
+      margin-top: 22px; background: var(--brand); color: #fff;
+      border: 0; padding: 12px 18px; border-radius: 12px; font-size: 1.05rem;
+      cursor: pointer; width: 100%; max-width: 320px;
+      box-shadow: 0 6px 16px rgba(0,120,255,.25);
     }
-    .guide:hover {
-      background: #005fcc;
+    .cta:active { transform: translateY(1px); }
+    .steps {
+      text-align: left; margin: 18px auto 0; width: min(92%, 360px);
+      background: #f3f6ff; border: 1px solid #e3edff; border-radius: 12px; padding: 14px 16px;
+      color: #2b4b80; font-size: .95rem;
     }
+    .steps h2 { margin: 0 0 6px; font-size: 1rem; }
+    .steps ol { margin: 0 0 6px 18px; padding: 0; }
+    .steps li { margin: 4px 0; }
     .footer {
-      margin-top: 20px;
-      font-size: 0.85rem;
-      color: #888;
+      margin-top: 16px; font-size: .85rem; color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="card">
+  <main class="card" role="main" aria-label="쿠팡 바로가기 안내">
     <img class="logo" src="https://static.coupangcdn.com/image/coupang/common/logo_coupang_w350.png" alt="쿠팡 로고">
-    <h1>쿠팡 바로가기를 홈 화면에 추가하세요</h1>
-    <p>쿠팡을 더 빠르게 만나보세요.<br>
-      아래 단계를 따라 홈 화면에 쿠팡 아이콘을 추가하면<br>
-      앱처럼 바로 접속할 수 있습니다.</p>
-    <button class="guide" onclick="showGuide()">추가 방법 보기</button>
+    <h1>쿠팡 사이트 바로가기를 홈 화면에 추가하세요</h1>
+    <p>쿠팡을 더 빠르게 만나보세요. 홈 화면에 아이콘을 추가하면 앱처럼 즉시 접속할 수 있어요.</p>
+    <button class="cta" id="openGuide" aria-label="추가 방법 보기">추가 방법 보기</button>
+
+    <section class="steps" id="guide" hidden>
+      <h2>📱 추가 방법</h2>
+      <strong>안드로이드(Chrome)</strong>
+      <ol>
+        <li>오른쪽 상단 <b>⋮</b> 메뉴 선택</li>
+        <li><b>홈 화면에 추가</b> 탭</li>
+        <li>아이콘 이름 확인 후 <b>추가</b></li>
+      </ol>
+      <strong>iPhone(Safari)</strong>
+      <ol>
+        <li>하단 <b>공유</b>(⬆️) 버튼</li>
+        <li><b>홈 화면에 추가</b> 선택</li>
+        <li>이름 입력 후 <b>추가</b></li>
+      </ol>
+    </section>
+
     <div class="footer">© Coupang · 안내 페이지</div>
-  </div>
+  </main>
 
   <script>
-    function showGuide() {
-      alert(
-        "📱 홈 화면에 추가하는 방법\n\n" +
-        "안드로이드: 메뉴(⋮) → 홈 화면에 추가\n" +
-        "iPhone: 공유(⬆️) → 홈 화면에 추가"
-      );
-    }
+    const guide = document.getElementById('guide');
+    document.getElementById('openGuide').addEventListener('click', () => {
+      guide.hidden = !guide.hidden;
+    });
 
-    // PWA service worker 등록 (있다면)
+    // PWA 등록 (GitHub Pages: /pwa-cp/ 경로)
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('/pwa-cp/service-worker.js')
         .then(r => console.log('Service Worker registered:', r.scope))
         .catch(e => console.error('SW registration failed:', e));
     }
