--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>쿠팡 바로가기 (브라우저 탭)</title>
+  <title>쿠팡 바로가기 설치</title>
   <link rel="manifest" href="/pwa-cp/manifest.json">
   <meta name="theme-color" content="#0078FF">
+  <link rel="apple-touch-icon" href="/pwa-cp/icons/icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="no">
-  <meta name="description" content="쿠팡을 브라우저 탭으로 여는 홈 화면 바로가기 안내">
   <style>
     :root { --brand:#0078FF; --text:#222; --muted:#586174; --bg:#f7f8fa; --shadow:rgba(0,0,0,.08); }
     * { box-sizing: border-box; }
     body { margin:0; background:var(--bg); min-height:100dvh; display:grid; place-items:center;
            font-family: 'Noto Sans KR', system-ui, -apple-system, Helvetica, Arial, sans-serif; color:var(--text); }
-    .card { width:min(92vw,440px); background:#fff; border-radius:20px; padding:40px 26px; text-align:center;
+    .card { width:min(92vw,460px); background:#fff; border-radius:20px; padding:40px 26px; text-align:center;
             box-shadow:0 16px 40px var(--shadow); }
     .logo { width:140px; height:auto; margin:0 auto 18px; display:block; }
     h1 { font-size:1.35rem; margin:0; }
     p { margin:12px 0 0; color:#555; line-height:1.6; }
     .btn { border:0; border-radius:12px; padding:12px 16px; font-size:1.05rem; cursor:pointer; }
     .btn-primary { background:#0078FF; color:#fff; box-shadow:0 6px 16px rgba(0,120,255,.25); }
-    .steps { text-align:left; margin:18px auto 0; width:min(92%,380px); background:#f3f6ff; border:1px solid #e3edff;
+    .steps { text-align:left; margin:18px auto 0; width:min(92%,400px); background:#f3f6ff; border:1px solid #e3edff;
              border-radius:12px; padding:14px 16px; color:#2b4b80; font-size:.95rem; }
     .steps h2 { margin:0 0 6px; font-size:1rem; }
     .steps ol { margin: 0 0 6px 18px; padding: 0; }
@@ -29,26 +29,24 @@
   </style>
 </head>
 <body>
-  <main class="card" role="main" aria-label="쿠팡 바로가기 안내">
+  <main class="card">
     <img class="logo" src="https://static.coupangcdn.com/image/coupang/common/logo_coupang_w350.png" alt="쿠팡 로고">
     <h1>쿠팡 바로가기를 홈 화면에 추가</h1>
-    <p>이 바로가기는 <b>브라우저 탭</b>으로 쿠팡을 엽니다. (앱 형태 X)</p>
-    <p><a class="btn btn-primary" href="https://www.coupang.com/?utm_source=hs-cta" rel="noreferrer">쿠팡으로 바로 이동</a></p>
+    <p>아래 버튼을 눌러 <b>설치용 페이지</b>를 연 뒤, 그 페이지를 홈 화면에 추가하세요.<br>아이콘을 누르면 즉시 쿠팡이 열립니다.</p>
+    <p><a class="btn btn-primary" href="/pwa-cp/launch.html?go=1">설치용 페이지 열기</a></p>
     <section class="steps">
       <h2>📱 추가 방법</h2>
       <strong>안드로이드 (Chrome)</strong>
       <ol>
-        <li>오른쪽 상단 <b>⋮</b> 메뉴</li>
-        <li><b>홈 화면에 추가</b> 선택</li>
-        <li>이름 확인 후 <b>추가</b></li>
+        <li>위 버튼으로 열린 페이지에서 오른쪽 상단 <b>⋮</b> 메뉴</li>
+        <li><b>홈 화면에 추가</b> 선택 → <b>추가</b></li>
       </ol>
       <strong>iPhone (Safari)</strong>
       <ol>
-        <li>하단 <b>공유</b>(⬆️) 버튼</li>
-        <li><b>홈 화면에 추가</b> 선택</li>
-        <li>이름 입력 후 <b>추가</b></li>
+        <li>위 버튼으로 열린 페이지에서 하단 <b>공유</b>(⬆️)</li>
+        <li><b>홈 화면에 추가</b> → 이름 입력 → <b>추가</b></li>
       </ol>
-      <p style="margin-top:8px;color:#6b7a99">※ 카카오톡/네이버 등 인앱 브라우저에서는 '크롬으로 열기' 또는 'Safari로 열기'를 사용하세요.</p>
+      <p style="margin-top:8px;color:#6b7a99">※ 인앱 브라우저(카톡/네이버)에서는 'Chrome/Safari로 열기'를 사용하세요.</p>
     </section>
     <div class="footer">© 안내 페이지</div>
   </main>
